- Fixed bug #52820 (writes to fopencookie FILE* not commited when seeking the   stream).